--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@tailwindcss/vite": "^4.0.17",
     "aos": "^2.3.4",
     "framer-motion": "^12.6.2",
@@ -17,6 +18,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^7.4.1",
     "react-tsparticles": "^2.12.2",
     "tailwindcss": "^4.0.17",
     "tsparticles": "^3.8.1",
